[package]
name = "gca-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
twox-hash = "1.6.1"
wasm-bindgen = "0.2.76"
sha2 = { version="0.9", default-features = false }

[dev-dependencies]
wasm-pack = "0.10.0"
