[package]
name = "gca-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
twox-hash = "1.6.1"
wasm-bindgen = "0.2.76"
web-sys = { version = "0.3.53", features = ["SubtleCrypto"] }
wasm-bindgen-futures = "0.4.26"
js-sys = "0.3.53"
console_error_panic_hook = "0.1.6"

[dev-dependencies]
wasm-pack = "0.10.0"
